# Cubesat-antenna-lab

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: sband_patch_stub.yaml  uhf_monopole.yaml  uhf_turnstile_stub.yaml
docs/: 01_requirements.md  02_trade_study.md  03_uhf_monopole_design.md  04_matching_vswr.md  05_deployment_mechanics.md  06_icd_interface.md  07_verification_plan.md
src/antenna_lab/: __init__.py  matching.py  monopole.py  sweep.py  units.py
tests/: test_matching_network.py  test_monopole_sizing.py  test_sweep_monotonic.py  test_units.py
