[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cubesat-antenna-lab"
version = "0.1.0"
description = "Antenna-first lab for 1U CubeSat: sizing + matching/VSWR + ICD/verification + CI"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
